--- a/index.html
+++ b/index.html
@@ -62,23 +62,23 @@
 									</header>
 									<ul class="features">
 										<li>
-											<i class="fab skill-icon fa-html5"></i>
+											<img class="fab skill-image" src="images/html5.png" alt="html5">
 											<h3>HTML</h3>
 										</li>
 										<li>
-											<i class="fab skill-icon fa-css3-alt"></i>
+											<img class="fab skill-image" src="images/css3.png" alt="css3">
 											<h3>CSS</h3>
 										</li>
 										<li>
-											<i class="fab skill-icon fa-js"></i>
+											<img class="fab skill-image" src="images/javascript.png" alt="javascript">
 											<h3>Javascript</h3>
 										</li>
 										<li>
-											<i class="fab skill-icon fa-sass"></i>
+											<img class="fab skill-image" src="images/sass.png" alt="sass">
 											<h3>SASS</h3>
 										</li>
 										<li>
-											<i class="fab skill-icon fa-vuejs"></i>
+											<img class="fab skill-image" src="images/vuejs.png" alt="vuejs">
 											<h3>Vue.js</h3>
 										</li>
 									</ul>
@@ -94,7 +94,7 @@
 											<h3>Dart</h3>
 										</li>
 										<li>
-											<img class="fab skill-image" src="images/flutter.png" alt="dart">
+											<img class="fab skill-image" src="images/flutter.png" alt="flutter">
 											<h3>Flutter</h3>
 										</li>
 									</ul>
@@ -105,7 +105,7 @@
 									</header>
 									<ul class="features">
 										<li>
-											<i class="fab skill-icon fa-node"></i>
+											<img class="fab skill-image nodejs" src="images/nodejs.png" alt="nodejs">
 											<h3>Node.js</h3>
 										</li>
 									</ul>	
@@ -116,11 +116,11 @@
 									</header>
 									<ul class="features">
 										<li>
-											<img class="fab skill-image" src="images/gcp.jpg" alt="dart">
+											<img class="fab skill-image" src="images/gcp.jpg" alt="gcp">
 											<h3>Google Cloud Platform</h3>
 										</li>
 										<li>
-											<img class="fab skill-image" src="images/firebase.png" alt="dart">
+											<img class="fab skill-image" src="images/firebase.png" alt="firebase">
 											<h3>Google Firebase</h3>
 										</li>
 									</ul>	
@@ -176,8 +176,7 @@
 							<section id="blog-and-extra" class="main special">
 								<header class="major">
 									<h2>블로그 및 기타</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<p>제가 프로그래밍을 하면서 깨달은 점들과 저만의 팁을 정리해놓은 블로그와, 제가 이제껏 참여했던 프로젝트에서 제가 작성한 문서들입니다.</p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
