more info added

--- a/index.html
+++ b/index.html
@@ -108,6 +108,14 @@
 											<img class="fab skill-image nodejs" src="images/nodejs.png" alt="nodejs">
 											<h3>Node.js</h3>
 										</li>
+										<li>
+											<img class="fab skill-image" src="images/mysql.jpg" alt="MySQL">
+											<h3>MySQL(basic)</h3>
+										</li>
+										<li>
+											<img class="fab skill-image" src="images/mongodb.png" alt="MongoDB">
+											<h3>MongoDB(basic)</h3>
+										</li>
 									</ul>	
 								</div>
 								<div class="skills">
@@ -180,8 +188,8 @@
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">블로그</a></li>
-										<li><a href="generic.html" class="button">기타 문서들</a></li>
+										<li><a href="https://codingmoondoll.tistory.com/" target="blank" class="button primary">블로그</a></li>
+										<li><a href="https://drive.google.com/drive/folders/1TFM-7JlHzfM-yoFnDUePxl_PhBsgHkQG?usp=sharing" target="blank" class="button">기타 문서들</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -196,8 +204,8 @@
 										<dd><a href="#">swon3210@gmail.com</a></dd>
 									</dl>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+										<li><a href="https://www.linkedin.com/in/songwon-lee-91652b113/" target="blank" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://github.com/swon3210?tab=repositories" target="blank" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 									</ul>
 								</div>
 							</section>
