--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 							<section id="project" class="main special">
 								<header class="major">
-									<h2>WEB PORTAL</h2>
+									<h2>PROJECT</h2>
 								</header>
 								<div class="project">
 									<img src="images/capstone-archive.PNG" class="project-image" alt="project-image">
