--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>SongWon's Portfolio</title>
+		<title>SongWonLee's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" type="image/png" href="images/portfolio-logo.png"/>
@@ -144,35 +144,64 @@
 									<img src="images/capstone-archive.PNG" class="project-image" alt="project-image">
 									<div class="project-info">
 										<h2>CAPSTONE ARCHIVE</h2>
-										<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-										posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+										<p>성균관대학교 학부생들의 수업 프로젝트 소개 및 관리 어플리케이션</p>
 										<ul class="project-buttons">
 											<li><a href="https://capstone-archive.cf/" target="blank" class="button primary">DEMO</a></li>
 											<li><a href="generic.html" class="button">상세</a></li>
+										</ul>
+										<ul class="tag-list">
+											<li class="tag">Vue.js</li>
+											<li class="tag">Vuetify</li>
+											<li class="tag">Node.js</li>
+											<li class="tag">Firebase</li>
 										</ul>
 									</div>
 								</div>
 								<div class="project">
 									<img src="images/capstone-archive.PNG" class="project-image" alt="project-image">
 									<div class="project-info">
-										<h2>CAPSTONE ARCHIVE</h2>
-										<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-										posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+										<h2>WARD SHOP (팀 프로젝트)</h2>
+										<p>개발자들만을 위한 맞춤형 의류 및 악세사리 판매 웹사이트</p>
 										<ul class="project-buttons">
 											<li><a href="https://capstone-archive.cf/" target="blank" class="button primary">DEMO</a></li>
 											<li><a href="generic.html" class="button">상세</a></li>
+										</ul>
+										<ul class="tag-list">
+											<li class="tag">Vue.js</li>
+											<li class="tag">Sass</li>
+											<li class="tag">AWS</li>
+											<li class="tag">GCP</li>
 										</ul>
 									</div>
 								</div>
 								<div class="project">
 									<img src="images/capstone-archive.PNG" class="project-image" alt="project-image">
 									<div class="project-info">
-										<h2>CAPSTONE ARCHIVE</h2>
-										<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-										posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+										<h2>BOOK INFO MANAGER</h2>
+										<p>성균관대 웹 데이터베이스 구축론에 사용된 예시 어플리케이션 + 수업자료</p>
 										<ul class="project-buttons">
 											<li><a href="https://capstone-archive.cf/" target="blank" class="button primary">DEMO</a></li>
 											<li><a href="generic.html" class="button">상세</a></li>
+										</ul>
+										<ul class="tag-list">
+											<li class="tag">Node.js</li>
+											<li class="tag">MySQL</li>
+											<li class="tag">GCP</li>
+										</ul>
+									</div>
+								</div>
+								<div class="project">
+									<img src="images/capstone-archive.PNG" class="project-image" alt="project-image">
+									<div class="project-info">
+										<h2>Flutter</h2>
+										<p>플러터 어플리케이션</p>
+										<ul class="project-buttons">
+											<li><a href="https://capstone-archive.cf/" target="blank" class="button primary">DEMO</a></li>
+											<li><a href="generic.html" class="button">상세</a></li>
+										</ul>
+										<ul class="tag-list">
+											<li class="tag">Flutter</li>
+											<li class="tag">Firebase</li>
 										</ul>
 									</div>
 								</div>
