--- a/index.html
+++ b/index.html
@@ -168,8 +168,9 @@
 										<ul class="tag-list">
 											<li class="tag">Vue.js</li>
 											<li class="tag">Sass</li>
-											<li class="tag">AWS</li>
-											<li class="tag">GCP</li>
+											<li class="tag">AWS S3</li>
+											<li class="tag">GCP Storage</li>
+											<li class="tag">GCP Compute Engine</li>
 										</ul>
 									</div>
 								</div>
