상세 보기 버튼 제거

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 										<p>성균관대학교 학부생들의 수업 프로젝트 소개 및 관리 어플리케이션</p>
 										<ul class="project-buttons">
 											<li><a href="https://capstone-archive.cf/" target="blank" class="button primary">DEMO</a></li>
-											<li><a href="generic.html" class="button">상세</a></li>
+											<!-- <li><a href="generic.html" class="button">상세</a></li> -->
 										</ul>
 										<ul class="tag-list">
 											<li class="tag">Vue.js</li>
@@ -163,7 +163,7 @@
 										<p>개발자들만을 위한 맞춤형 의류 및 악세사리 판매 웹사이트</p>
 										<ul class="project-buttons">
 											<li><a href="http://www.ward-study.com.s3-website.ap-northeast-2.amazonaws.com/" target="blank" class="button primary">DEMO</a></li>
-											<li><a href="generic.html" class="button">상세</a></li>
+											<!-- <li><a href="generic.html" class="button">상세</a></li> -->
 										</ul>
 										<ul class="tag-list">
 											<li class="tag">Vue.js</li>
