--- a/generic.html
+++ b/generic.html
@@ -19,8 +19,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Book Info Manager</h1>
-						<p>성균관대학교 웹 데이터베이스 구축론 수업 예시 어플리케이션</p>
+						<h1>프로젝트</h1>
+						<p>작성 중입니다.</p>
 					</header>
 
 				<!-- Main -->
