more info added

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 											<h2>심플한 개발자</h2>
 										</header>
 										
-										<p>더 많은 것을 익히고, 더 많은 것을 만들어보면서, 개발자로서의 저 자신의 성장과, 제가 만들어내는 프로그램이 지속적으로 성장해가는 삶을 살고자 합니다.</p>
+										<p>더 많은 것을 익히고, 더 많은 것을 만들어보면서, 개발자로서의 저 자신의 성장과, 제가 만들어내는 프로그램이 함께 진보하기를 희망합니다</p>
 										
 									</div>
 									<span class="image"><img src="images/profile.jfif" alt="" /></span>
@@ -74,12 +74,20 @@
 											<h3>Javascript</h3>
 										</li>
 										<li>
+											<img class="fab skill-image" src="images/typescript.png" alt="typescript">
+											<h3>Typescript</h3>
+										</li>
+										<li>
 											<img class="fab skill-image" src="images/sass.png" alt="sass">
 											<h3>SASS</h3>
 										</li>
 										<li>
 											<img class="fab skill-image" src="images/vuejs.png" alt="vuejs">
 											<h3>Vue.js</h3>
+										</li>
+										<li>
+											<img class="fab skill-image" src="images/reactjs.png" alt="reactjs">
+											<h3>React.js</h3>
 										</li>
 									</ul>
 								</div>
@@ -137,40 +145,60 @@
 
 							<section id="project" class="main special">
 								<header class="major">
-									<h2>PROJECT</h2>
+									<h2>MAIN PROJECT</h2>
 								</header>
-								<div class="project">
-									<img src="images/capstone-archive.png" class="project-image" alt="project-image">
-									<div class="project-info">
-										<h2>CAPSTONE ARCHIVE</h2>
-										<p>성균관대학교 학부생들의 수업 프로젝트 소개 및 관리 어플리케이션</p>
-										<ul class="project-buttons">
-											<li><a href="https://capstone-archive.cf/" target="blank" class="button primary">DEMO</a></li>
-											<!-- <li><a href="generic.html" class="button">상세</a></li> -->
-										</ul>
-										<ul class="tag-list">
-											<li class="tag">Vue.js</li>
-											<li class="tag">Vuetify</li>
-											<li class="tag">Node.js</li>
-											<li class="tag">Firebase</li>
-										</ul>
-									</div>
-								</div>
 								<div class="project">
 									<img src="images/ward-shop.png" class="project-image" alt="project-image">
 									<div class="project-info">
 										<h2>WARD SHOP (팀 프로젝트)</h2>
 										<p>개발자들만을 위한 맞춤형 의류 및 악세사리 판매 웹사이트</p>
 										<ul class="project-buttons">
-											<li><a href="http://www.ward-study.com.s3-website.ap-northeast-2.amazonaws.com/" target="blank" class="button primary">DEMO</a></li>
+											<li><a href="http://www.ward-study.com" target="blank" class="button primary">Client DEMO</a></li>
+											<li><a href="http://admin.ward-study.com" target="blank" class="button primary">Admin DEMO</a></li>
+											<li><a href="ward-shop.html" class="button fit">상세</a></li>
 											<!-- <li><a href="generic.html" class="button">상세</a></li> -->
 										</ul>
 										<ul class="tag-list">
 											<li class="tag">Vue.js</li>
+											<li class="tag">React.js</li>
 											<li class="tag">Sass</li>
 											<li class="tag">AWS S3</li>
 											<li class="tag">GCP Storage</li>
 											<li class="tag">GCP Compute Engine</li>
+										</ul>
+									</div>
+								</div>
+								<div class="project">
+									<img src="images/vusqa.png" class="project-image" alt="project-image">
+									<div class="project-info">
+										<h2>Vusqa 포털사이트 (외주 작업)</h2>
+										<p>칠레의 뉴스포털 어플레키에션</p>
+										<ul class="project-buttons">
+											<li><a href="https://vusqa-app.firebaseapp.com/" target="blank" class="button primary">Client DEMO</a></li>
+											<li><a href="vusqa.html" class="button fit">상세</a></li>
+										</ul>
+										<ul class="tag-list">
+											<li class="tag">Vue.js</li>
+											<li class="tag">Sass</li>
+											<li class="tag">Node.js</li>
+											<li class="tag">Firebase</li>
+										</ul>
+									</div>
+								</div>
+								<div class="project">
+									<img src="images/mybrary.png" class="project-image" alt="project-image">
+									<div class="project-info">
+										<h2>Mybrary (개인 프로젝트)</h2>
+										<p>나만의 도서관 만들기 어플리케이션</p>
+										<ul class="project-buttons">
+											<li><a href="https://swon3210.gitbook.io/mybrary/" target="blank" class="button primary">API Docs</a></li>
+											<li><a href="mybrary.html" class="button fit">상세</a></li>
+										</ul>
+										<ul class="tag-list">
+											<li class="tag">Node.js</li>
+											<li class="tag">GCP Computed Engine</li>
+											<li class="tag">Docker</li>
+											<li class="tag">MySQL</li>
 										</ul>
 									</div>
 								</div>
@@ -213,12 +241,13 @@
 						<!-- Get Started -->
 							<section id="blog-and-extra" class="main special">
 								<header class="major">
-									<h2>블로그 및 기타</h2>
-									<p>제가 프로그래밍을 하면서 깨달은 점들과 저만의 팁을 정리해놓은 블로그와, 제가 이제껏 참여했던 프로젝트에서 제가 작성한 문서들입니다.</p>
+									<h2>GitHub 및 기타</h2>
+									<p>저의 깃허브 리포지터리, 제가 프로그래밍을 하면서 깨달은 점들과 저만의 팁을 정리해놓은 블로그, 제가 이제껏 참여했던 프로젝트에서 제가 작성한 문서들입니다.</p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="https://codingmoondoll.tistory.com/" target="blank" class="button primary">블로그</a></li>
+										<li><a href="https://github.com/swon3210?tab=repositories" target="blank" class="button primary">GitHub</a></li>
+										<li><a href="https://codingmoondoll.tistory.com/" target="blank" class="button">블로그</a></li>
 										<li><a href="https://drive.google.com/drive/folders/1TFM-7JlHzfM-yoFnDUePxl_PhBsgHkQG?usp=sharing" target="blank" class="button">기타 문서들</a></li>
 									</ul>
 								</footer>
@@ -231,7 +260,9 @@
 								<div class="contact-info">
 									<dl class="alt">
 										<dt>Email</dt>
-										<dd><a href="#">swon3210@gmail.com</a></dd>
+										<dd><a>swon3210@gmail.com</a></dd>
+										<dt>Phone</dt>
+										<dd><a>010-3430-3210</a></dd>
 									</dl>
 									<ul class="icons">
 										<li><a href="https://www.linkedin.com/in/songwon-lee-91652b113/" target="blank" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
