--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 									<img src="images/vusqa.png" class="project-image" alt="project-image">
 									<div class="project-info">
 										<h2>Vusqa 포털사이트 (외주 작업)</h2>
-										<p>칠레의 뉴스포털 어플레키에션</p>
+										<p>칠레의 뉴스포털 어플리케에션</p>
 										<ul class="project-buttons">
 											<li><a href="https://vusqa-app.firebaseapp.com/" target="blank" class="button primary">Client DEMO</a></li>
 											<li><a href="vusqa.html" class="button fit">상세</a></li>
