--- a/chajazone copy.html
+++ b/chajazone copy.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Mybrary</title>
+    <title>찾아존</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -30,7 +30,7 @@
         <!-- Content -->
         <section id="content" class="main">
           <span class="image main head-image"
-            ><img src="images/mybrary.png" alt=""
+            ><img src="images/chajazone-header.png" alt=""
           /></span>
 
           <h2>기획 의도</h2>
