--- a/index.html
+++ b/index.html
@@ -148,23 +148,21 @@
 									<h2>MAIN PROJECT</h2>
 								</header>
 								<div class="project">
-									<img src="images/ward-shop.png" class="project-image" alt="project-image">
+									<img src="images/chajazone.png" class="project-image" alt="project-image">
 									<div class="project-info">
-										<h2>WARD SHOP (팀 프로젝트)</h2>
-										<p>개발자들만을 위한 맞춤형 의류 및 악세사리 판매 웹사이트</p>
+										<h2>찾아존 (팀 프로젝트)</h2>
+										<p>선호 이동 수단과 기타 조건을 바탕으로 한 장소 추천 서비스</p>
 										<ul class="project-buttons">
-											<li><a href="http://www.ward-study.com" target="blank" class="button primary">Client DEMO</a></li>
-											<li><a href="http://admin.ward-study.com" target="blank" class="button primary">Admin DEMO</a></li>
-											<li><a href="ward-shop.html" class="button fit">상세</a></li>
+											<li><a href="http://www.ward-study.com" target="blank" class="button primary">DEMO</a></li>
+											<li><a href="chajazone.html" class="button fit">상세</a></li>
 											<!-- <li><a href="generic.html" class="button">상세</a></li> -->
 										</ul>
 										<ul class="tag-list">
-											<li class="tag">Vue.js</li>
 											<li class="tag">React.js</li>
-											<li class="tag">Sass</li>
-											<li class="tag">AWS S3</li>
-											<li class="tag">GCP Storage</li>
-											<li class="tag">GCP Compute Engine</li>
+											<li class="tag">Redux</li>
+											<li class="tag">Redux-Saga</li>
+											<li class="tag">Typescript</li>
+											<li class="tag">SASS(SCSS)</li>
 										</ul>
 									</div>
 								</div>
@@ -186,19 +184,21 @@
 									</div>
 								</div>
 								<div class="project">
-									<img src="images/mybrary.png" class="project-image" alt="project-image">
+									<img src="images/ward-shop.png" class="project-image" alt="project-image">
 									<div class="project-info">
-										<h2>Mybrary (개인 프로젝트)</h2>
-										<p>나만의 도서관 만들기 어플리케이션</p>
+										<h2>WARD</h2>
+										<p>프로그래머들을 위한 온라인 쇼핑몰</p>
 										<ul class="project-buttons">
-											<li><a href="https://swon3210.gitbook.io/mybrary/" target="blank" class="button primary">API Docs</a></li>
-											<li><a href="mybrary.html" class="button fit">상세</a></li>
+											<li><a href="https://quizzical-mcnulty-6a133d.netlify.com/" target="blank" class="button primary">Component Docs</a></li>
+											<li><a href="ward.html" class="button fit">상세</a></li>
 										</ul>
 										<ul class="tag-list">
-											<li class="tag">Node.js</li>
-											<li class="tag">GCP Computed Engine</li>
-											<li class="tag">Docker</li>
-											<li class="tag">MySQL</li>
+											<li class="tag">Vue.js</li>
+											<li class="tag">React.js</li>
+											<li class="tag">Sass</li>
+											<li class="tag">AWS S3</li>
+											<li class="tag">GCP Storage</li>
+											<li class="tag">GCP Compute Engine</li>
 										</ul>
 									</div>
 								</div>
