--- a/vusqa.html
+++ b/vusqa.html
@@ -76,7 +76,7 @@
               <p class="link-block">
 								<a href="https://github.com/swon3210/vusqa-frontend-v1">Vusqa 초기 퍼블리싱(Bootstrap) 깃허브</a>
 								<a href="https://github.com/swon3210/vusqa-frontend-v2">Vusqa 후기 퍼블리싱(SASS) 깃허브</a>
-							<a href="https://agitated-northcutt-0787ac.netlify.com/?path=/story/components-pages--headline-page">Vusqu 스토리북</a>
+							<a href="https://agitated-northcutt-0787ac.netlify.com/?path=/story/components-pages--headline-page">Vusqa 컴포넌트 문서</a>
               </p>
             </p>
           </div>
