chajazone description modified & main page button position fixed

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 										<h2>찾아존 (팀 프로젝트)</h2>
 										<p>선호 이동 수단과 기타 조건을 바탕으로 한 장소 추천 서비스</p>
 										<ul class="project-buttons">
-											<li><a href="http://www.ward-study.com" target="blank" class="button primary">DEMO</a></li>
+											<li><a href="http://chajazone.s3-website.ap-northeast-2.amazonaws.com/" target="blank" class="button primary">DEMO</a></li>
 											<li><a href="chajazone.html" class="button fit">상세</a></li>
 											<!-- <li><a href="generic.html" class="button">상세</a></li> -->
 										</ul>
@@ -172,7 +172,7 @@
 										<h2>Vusqa 포털사이트 (외주 작업)</h2>
 										<p>칠레의 뉴스포털 어플리케에션</p>
 										<ul class="project-buttons">
-											<li><a href="https://vusqa-app.firebaseapp.com/" target="blank" class="button primary">Client DEMO</a></li>
+											<li><a href="https://serene-lewin-bc290e.netlify.app/?path=/story/components-pages--front-page" target="blank" class="button primary">Component Docs</a></li>
 											<li><a href="vusqa.html" class="button fit">상세</a></li>
 										</ul>
 										<ul class="tag-list">
@@ -189,7 +189,10 @@
 										<h2>WARD</h2>
 										<p>프로그래머들을 위한 온라인 쇼핑몰</p>
 										<ul class="project-buttons">
-											<li><a href="https://quizzical-mcnulty-6a133d.netlify.com/" target="blank" class="button primary">Component Docs</a></li>
+											<li><a href="https://quizzical-mcnulty-6a133d.netlify.com/" target="blank" class="button primary">Components(Admin)</a></li>
+											<li><a href="https://quizzical-mcnulty-6a133d.netlify.com/" target="blank" class="button primary">Components(Client)</a></li>
+										</ul>
+										<ul class="project-buttons" style="margin-top: 10px;">
 											<li><a href="ward.html" class="button fit">상세</a></li>
 										</ul>
 										<ul class="tag-list">
