--- a/chajazone.html
+++ b/chajazone.html
@@ -21,8 +21,8 @@
     <div id="wrapper">
       <!-- Header -->
       <header id="header">
-        <h1>Mybrary</h1>
-        <p>Node.js</p>
+        <h1>찾아존</h1>
+        <p>React.js + Typescript</p>
       </header>
 
       <!-- Main -->
@@ -37,11 +37,12 @@
           <p>
             찾아존은 이사를 하게 되었거나, 서울로 상경하게 되었을 때 등의 이유로 살 곳을 찾는 사람들이 자신이나 직장이나 학교를 원하는 조건(걸리는 시간, 교통 수단, 환승 횟수) 하에 출발할 수 있는 지역(ZONE)를 찾아줍니다. 검색이 끝나고 'ZONE'을 선택하면 해당 ZONE 이 이주에 적합한 곳인지를 판단할 수 있는 여러 정보를 제공합니다. 해당 ZONE 으로 이주했을 때 지역의 각종 명소에 가는 시간이 얼마나 절약되는지, 해당 ZONE에 어떤 편의시설들이 있는지, 본인이 설정한 회사, 혹은 학교의 위치에서 ZONE으로 갈 수 있는 방법이 어떤 게 있는지, 그리고 해당 ZONE에 이주를 결정했을 때 참고해 볼 수 있는 각종 부동산 매물 정보를 알려줍니다.
           </p>
-
+          <br />
           <h2>프로젝트 내의 역할</h2>
           <p>
             저는 이 프로젝트에서 랜딩 페이지, 동네 검색 결과 팝업과 시간 비교, 교통편 소개, 매물 소개 페이지의 프론트엔드 개발을 맡았습니다. 팀에서 '빠르고 가볍게 이용할 수 있는 서비스'를 모토로 하였기에 사용자가 직접 데이터를 저장, 삭제, 수정할 수 있어야 하는 부분은 웹 브라우저의 localStorage를 활용하여 회원가입, 로그인 없이도 서비스를 이용할 수 있게 하였습니다.
           </p>
+          <br />
           <hr />
 
           
